--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Oct 06 2025 05:21:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="68e2b5037ce335565e421325" data-wf-site="68e2b5017ce335565e4212dc" lang="en">
 <head>
   <meta charset="utf-8">
