--- a/index.html
+++ b/index.html
@@ -36,25 +36,25 @@
               </a>
               <a data-w-id="4445a924-53a8-cb5a-64c0-9586037f5a06" href="/#about-us" class="nav-link w-inline-block">
                 <div class="nav-link-text-div">
-                  <div class="nav-link-text">About Us</div>
+                  <!-- <div class="nav-link-text">About Us</div> -->
                   <div class="nav-line-div"></div>
                 </div><img src="images/nav-link-icon.svg" loading="lazy" alt="" class="nav-link-image">
               </a>
               <a data-w-id="4445a924-53a8-cb5a-64c0-9586037f5a0c" href="/#services" class="nav-link w-inline-block">
                 <div class="nav-link-text-div">
-                  <div class="nav-link-text">Services</div>
+                  <!-- <div class="nav-link-text">Services</div> -->
                   <div class="nav-line-div"></div>
                 </div><img src="images/nav-link-icon.svg" loading="lazy" alt="" class="nav-link-image">
               </a>
               <a data-w-id="4445a924-53a8-cb5a-64c0-9586037f5a12" href="projects.html" class="nav-link w-inline-block">
                 <div class="nav-link-text-div">
-                  <div class="nav-link-text">Our Projects</div>
+                  <!-- <div class="nav-link-text">Our Projects</div> -->
                   <div class="nav-line-div"></div>
                 </div><img src="images/nav-link-icon.svg" loading="lazy" alt="" class="nav-link-image">
               </a>
               <a data-w-id="4445a924-53a8-cb5a-64c0-9586037f5a18" href="blog.html" class="nav-link w-inline-block">
                 <div class="nav-link-text-div">
-                  <div class="nav-link-text">Blog</div>
+                  <!-- <div class="nav-link-text">Blog</div> -->
                   <div class="nav-line-div"></div>
                 </div><img src="images/nav-link-icon.svg" loading="lazy" alt="" class="nav-link-image">
               </a>
@@ -66,14 +66,14 @@
               </a>
               <a data-w-id="4445a924-53a8-cb5a-64c0-9586037f5a24" href="404.html" class="nav-link w-inline-block">
                 <div class="nav-link-text-div">
-                  <div class="nav-link-text">404</div>
+                  <!-- <div class="nav-link-text">404</div> -->
                   <div class="nav-line-div"></div>
                 </div><img src="images/nav-link-icon.svg" loading="lazy" alt="" class="nav-link-image">
               </a>
             </div>
             <div class="nav-bottom-div">
-              <div class="nav-info-div"><img src="images/logo-icon.svg" loading="lazy" alt="" class="logo-icon">
-                <div class="small-paragraph nav-bottom-text">Beyond Clicks, Into Conversions!</div>
+              <!-- <div class="nav-info-div"><img src="images/Semper.png" loading="lazy" alt="" class="logo-icon"> -->
+                <div class="small-paragraph nav-bottom-text">Semper | Stop Hiring. Start Automating.</div>
               </div>
               <div class="social-media-link-div">
                 <a href="https://www.linkedin.com/" target="_blank" class="paragraph social-media-link">LinkedIn</a>
@@ -699,6 +699,9 @@
       </div>
     </div>
   </section>
+
+
+
   <section class="section">
     <div class="w-layout-blockcontainer container w-container">
       <div class="w-layout-grid faq-grid">
@@ -714,10 +717,10 @@
               <div data-delay="0" data-hover="false" data-w-id="8f49cda5-3e24-0eb0-5ff5-cc35db9f2f94" class="accordion w-dropdown">
                 <div class="accordion-toggle w-dropdown-toggle">
                   <div class="faq-toggle-div"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-01"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-02"></div>
-                  <div class="large-paragraph bold-text faq-heading">How can I enroll in the Dental Care program?</div>
+                  <div class="large-paragraph bold-text faq-heading">How much do your services cost? Is there a flat fee?</div>
                 </div>
                 <nav class="accordion-list w-dropdown-list">
-                  <p class="paragraph faq-ans">We don’t do cookie-cutter work. Every strategy is tailored to your goals, backed by data, and built by a team that actually cares about your growth.</p>
+                  <p class="paragraph faq-ans">We don’t do cookie-cutter work. Our pricing is structured to match the complexity and scope of your required IT stack. We operate on a fixed-fee model for our Managed IT and Security services, providing cost predictability. Custom projects (software, cloud migration) are scoped based on engineering hours and deliverable milestones. After the initial Strategic Briefing, we provide a detailed, itemized proposal.</p>
                 </nav>
               </div>
             </div>
@@ -725,10 +728,10 @@
               <div data-delay="0" data-hover="false" data-w-id="8f49cda5-3e24-0eb0-5ff5-cc35db9f2f9f" class="accordion w-dropdown">
                 <div class="accordion-toggle w-dropdown-toggle">
                   <div class="faq-toggle-div"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-01"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-02"></div>
-                  <div class="large-paragraph bold-text faq-heading">How long until I see results?</div>
+                  <div class="large-paragraph bold-text faq-heading">How quickly will we see a return on investment (ROI)?</div>
                 </div>
                 <nav class="accordion-list w-dropdown-list">
-                  <p class="paragraph faq-ans">It depends on your goals, but most clients start seeing traction within the first few weeks—and strong results within 1–3 months.</p>
+                  <p class="paragraph faq-ans">The ROI timeline depends on the service. You will see immediate results in system stability and security within the first month. Operational efficiency (e.g., process automation) typically shows a measurable ROI within 90 to 120 days. We track this using pre-defined metrics (e.g., reduction in downtime, time saved per process) defined in the initial blueprint.</p>
                 </nav>
               </div>
             </div>
@@ -747,10 +750,10 @@
               <div data-delay="0" data-hover="false" data-w-id="8f49cda5-3e24-0eb0-5ff5-cc35db9f2fb5" class="accordion w-dropdown">
                 <div class="accordion-toggle w-dropdown-toggle">
                   <div class="faq-toggle-div"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-01"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-02"></div>
-                  <div class="large-paragraph bold-text faq-heading">How do you measure success?</div>
+                  <div class="large-paragraph bold-text faq-heading">How do you measure success beyond just fixing a problem?</div>
                 </div>
                 <nav class="accordion-list w-dropdown-list">
-                  <p class="paragraph faq-ans">We track what matters—traffic, engagement, leads, and conversions. Clear reports, real results.</p>
+                  <p class="paragraph faq-ans">We measure success against your key business objectives (KBOs), not ours. This includes metrics like Infrastructure Uptime (99.99%), Employee Hours Reallocated (Automation), and Operational Cost Reduction. Our goal is to shift your IT from a cost center to a verifiable, performance-driving asset.</p>
                 </nav>
               </div>
             </div>
@@ -758,10 +761,10 @@
               <div data-delay="0" data-hover="false" data-w-id="8f49cda5-3e24-0eb0-5ff5-cc35db9f2fc0" class="accordion w-dropdown">
                 <div class="accordion-toggle w-dropdown-toggle">
                   <div class="faq-toggle-div"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-01"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-02"></div>
-                  <div class="large-paragraph bold-text faq-heading">What industries do you work with?</div>
+                  <div class="large-paragraph bold-text faq-heading">Do you work with companies of all sizes?</div>
                 </div>
                 <nav class="accordion-list w-dropdown-list">
-                  <p class="paragraph faq-ans">It starts with a quick call. From there, we learn your goals, create a plan, and launch fast.</p>
+                  <p class="paragraph faq-ans">Our ecosystem and service model are specifically engineered for Small to Mid-sized Businesses (SMBs) and the Mid-Market (typically 20 to 500 employees). We provide the strategic depth and infrastructure support necessary for scaling companies that need enterprise-grade stability without the enterprise-level budget.</p>
                 </nav>
               </div>
             </div>
@@ -769,10 +772,10 @@
               <div data-delay="0" data-hover="false" data-w-id="8f49cda5-3e24-0eb0-5ff5-cc35db9f2fcb" class="accordion w-dropdown">
                 <div class="accordion-toggle w-dropdown-toggle">
                   <div class="faq-toggle-div"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-01"><img src="images/accordion-toggle.svg" loading="lazy" alt="" class="faq-toggle-02"></div>
-                  <div class="large-paragraph bold-text faq-heading">How much do your services cost?</div>
+                  <div class="large-paragraph bold-text faq-heading">What industries do you specialize in?</div>
                 </div>
                 <nav class="accordion-list w-dropdown-list">
-                  <p class="paragraph faq-ans">Absolutely. Head over to our Projects page to explore real client success stories.</p>
+                  <p class="paragraph faq-ans">While technology is industry-agnostic, our deepest experience and most impactful case studies are within sectors where compliance, data security, and operational stability are paramount. These include: Professional Services (Legal, Financial, Accounting), Logistics & Distribution, and Specialty Manufacturing.</p>
                 </nav>
               </div>
             </div>
@@ -828,9 +831,9 @@
       <div class="footer-wrapper">
         <div class="newsletter-wrapper">
           <div data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa841353" class="common-heading-div">
-            <div class="large-text newsletter-sub-heading">(510) 988-4089</div>
-            <h2 class="h2-heading white-text">hello@diorix.co</h2>
-            <div class="small-paragraph white-800-color newsletter-paragraph">Av. Diagonal 334045457 Barcelona | Spain</div>
+            <div class="large-text newsletter-sub-heading">(760) 791-5525</div>
+            <h2 class="h2-heading white-text">hello@semper.ai</h2>
+            <div class="small-paragraph white-800-color newsletter-paragraph">Malibu, Los Angeles | United States</div>
           </div>
           <div data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84135a" class="newsletter-detail-div">
             <h2 class="h2-heading white-text">Stay Connected</h2>
@@ -847,24 +850,24 @@
           </div>
         </div>
         <div class="footer-detail-div">
-          <a data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84136a" href="index.html" aria-current="page" class="brand-link w-inline-block w--current"><img src="images/logo-large.svg" loading="lazy" alt="Logo" class="footer-logo"></a>
+          <a data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84136a" href="index.html" aria-current="page" class="brand-link w-inline-block w--current"><img src="images/Semper.png" loading="lazy" alt="Logo" class="footer-logo"></a>
           <div data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84136c" class="footer-link-div">
-            <a href="index.html" aria-current="page" class="large-paragraph footer-text-link w--current">HOME</a>
+            <!-- <a href="index.html" aria-current="page" class="large-paragraph footer-text-link w--current">HOME</a>
             <a href="/#about-us" class="large-paragraph footer-text-link">ABOUT US</a>
             <a href="/#services" class="large-paragraph footer-text-link">SERVICES</a>
             <a href="projects.html" class="large-paragraph footer-text-link">OUR PROJECT</a>
-            <a href="blog.html" class="large-paragraph footer-text-link">BLOGS</a>
+            <a href="blog.html" class="large-paragraph footer-text-link">BLOGS</a> -->
             <a href="contact-us.html" class="large-paragraph footer-text-link">CONTACT US</a>
-            <a href="404.html" class="large-paragraph footer-text-link">404</a>
+            <!-- <a href="404.html" class="large-paragraph footer-text-link">404</a> -->
           </div>
         </div>
         <div class="bottom-footer-div">
           <div data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84137c" class="copyright-div">
-            <div class="paragraph white-800-color">© 2025 All rights reserved. | Designed by <a href="https://flowcub.com/?utm_source=webflow&amp;utm_medium=diorix" target="_blank" class="paragraph white-800-color copyright-text-link">Flowcub Design</a>. | Powered by <a href="https://webflow.com" target="_blank" class="paragraph white-800-color copyright-text-link">Webflow</a>.</div>
+            <div class="paragraph white-800-color">© 2025 All rights reserved. | Powered by Semper.</div>
             <div class="template-link-div">
-              <a href="templates/changelog.html" class="paragraph white-800-color template-text-link">CHANGELOG</a>
-              <a href="templates/styleguide.html" class="paragraph white-800-color template-text-link">STYLEGUIDE</a>
-              <a href="templates/license.html" class="paragraph white-800-color template-text-link">LICENSE</a>
+              <!-- <a href="templates/changelog.html" class="paragraph white-800-color template-text-link">CHANGELOG</a> -->
+              <!-- <a href="templates/styleguide.html" class="paragraph white-800-color template-text-link">STYLEGUIDE</a> -->
+              <!-- <a href="templates/license.html" class="paragraph white-800-color template-text-link">LICENSE</a> -->
             </div>
           </div>
           <div data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84138c" class="social-media-div">
@@ -892,7 +895,7 @@
       <a href="https://flowcub.com/help-center/" target="_blank" class="buy-template-link customization w-inline-block"><img loading="lazy" src="images/flowcub.svg" alt="Logo" class="webflow-logo">
         <div class="buy-template-div">
           <div class="template-text">Book a free assessment</div>
-          <div class="template-text template-link-text">Schedule here and we&#x27;ll respond within an hour</div>
+          <div class="template-text template-link-text">Schedule here and we&#x27;ll respond within 24 hours </div>
         </div>
       </a>
       <div class="hidden-code w-embed w-script">
