replaced some logos

--- a/contact-us.html
+++ b/contact-us.html
@@ -148,7 +148,7 @@
                   <a href="https://twitter.com/" target="_blank" class="paragraph social-media-link bold-text">X (twitter)</a>
                 </div>
               </div>
-              <div class="nav-info-div"><img src="images/logo-icon.svg" loading="lazy" alt="" class="logo-icon">
+              <!-- <div class="nav-info-div"><img src="images/logo-icon.svg" loading="lazy" alt="" class="logo-icon"> -->
                 <div class="small-paragraph nav-bottom-text">Semper | Stop Hiring. Start Automating.</div>
               </div>
             </div>
@@ -273,7 +273,7 @@
           </div>
         </div>
         <div class="footer-detail-div">
-          <a data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84136a" href="index.html" class="brand-link w-inline-block"><img src="images/logo-large.svg" loading="lazy" alt="Logo" class="footer-logo"></a>
+          <!-- <a data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84136a" href="index.html" class="brand-link w-inline-block"><img src="images/logo-large.svg" loading="lazy" alt="Logo" class="footer-logo"></a> -->
           <div data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84136c" class="footer-link-div">
             <a href="index.html" class="large-paragraph footer-text-link">HOME</a>
             <!-- <a href="/#about-us" class="large-paragraph footer-text-link">ABOUT US</a> -->
