--- a/contact-us.html
+++ b/contact-us.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Oct 06 2025 05:21:14 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="68e2b5037ce335565e42132a" data-wf-site="68e2b5017ce335565e4212dc" lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Semper | Stop Hiring. Start Automating</title>
+  <title>Semperr | Stop Hiring. Start Automating</title>
   <meta content="Diorix - Webflow HTML website template" property="og:title">
   <meta content="Diorix - Webflow HTML website template" property="twitter:title">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -74,7 +74,7 @@
             </div>
             <div class="nav-bottom-div">
               <!-- <div class="nav-info-div"><img src="images/logo-icon.svg" loading="lazy" alt="" class="logo-icon"> -->
-                <div class="small-paragraph nav-bottom-text">SEMPER | STOP HIRING. START AUTOMATING.</div>
+                <div class="small-paragraph nav-bottom-text">SEMPERR | STOP HIRING. START AUTOMATING.</div>
               </div>
               <div class="social-media-link-div">
                 <a href="https://www.linkedin.com/" target="_blank" class="paragraph social-media-link">LinkedIn</a>
@@ -112,7 +112,7 @@
             <div data-w-id="e43013a7-2ce0-4cc2-c229-b14460b2b02f" style="opacity:0" class="contact-line"></div>
             <div data-w-id="de2cdc03-b3c7-feae-7995-96644c082167" style="opacity:0" class="common-heading-div">
               <div class="large-text contact-number-text">(760) 916-6605</div>
-              <h1 class="h2-heading">hello@semper.ai</h1>
+              <h1 class="h2-heading">hello@semperr.ai</h1>
               <p class="small-paragraph contact-location-text">Malibu, Los Angeles | United States</p>
             </div>
           </div>
@@ -149,7 +149,7 @@
                 </div>
               </div>
               <!-- <div class="nav-info-div"><img src="images/logo-icon.svg" loading="lazy" alt="" class="logo-icon"> -->
-                <div class="small-paragraph nav-bottom-text">Semper | Stop Hiring. Start Automating.</div>
+                <div class="small-paragraph nav-bottom-text">Semperr | Stop Hiring. Start Automating.</div>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@
         <div class="newsletter-wrapper">
           <div data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa841353" class="common-heading-div">
             <div class="large-text newsletter-sub-heading">(760) 916-6605</div>
-            <h2 class="h2-heading white-text">hello@semper.ai</h2>
+            <h2 class="h2-heading white-text">hello@semperr.com</h2>
             <div class="small-paragraph white-800-color newsletter-paragraph">Malibu, Los Angeles | United States</div>
           </div>
           <div data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84135a" class="newsletter-detail-div">
@@ -286,7 +286,7 @@
         </div>
         <div class="bottom-footer-div">
           <div data-w-id="8a205e0f-64eb-5b4e-ddeb-b5a2aa84137c" class="copyright-div">
-            <div class="paragraph white-800-color">© 2025 All rights reserved. | Powered by Semper.</div>
+            <div class="paragraph white-800-color">© 2025 All rights reserved. | Powered by Semperr.</div>
             <div class="template-link-div">
               <!-- <a href="templates/changelog.html" class="paragraph white-800-color template-text-link">CHANGELOG</a> -->
               <!-- <a href="templates/styleguide.html" class="paragraph white-800-color template-text-link">STYLEGUIDE</a> -->
@@ -309,13 +309,13 @@
   <div class="template-popup-div">
     <div class="buy-template-main-div">
       <div class="template-dot" data-w-id="b4aea502-4609-5b07-9651-a1be81376fd5" data-animation-type="lottie" data-src="https://cdn.prod.website-files.com/67ff9e10f8e336edbfc2a5e6/6818b0c1b0c3f8f660a11bd4_dot.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="0" data-duration="2"></div>
-      <a href="https://flowcub.com/webflow-templates/" target="_blank" class="buy-template-link w-inline-block"><img loading="lazy" src="images/webflow.svg" alt="Logo" class="webflow-logo width">
+      <a href="#" target="_blank" class="buy-template-link w-inline-block"><img loading="lazy" src="images/webflow.svg" alt="Logo" class="webflow-logo width">
         <div class="buy-template-div">
           <div class="template-text">Book a call today</div>
           <div class="template-text template-link-text">Schedule today</div>
         </div>
       </a>
-      <a href="https://flowcub.com/help-center/" target="_blank" class="buy-template-link customization w-inline-block"><img loading="lazy" src="images/flowcub.svg" alt="Logo" class="webflow-logo">
+      <a href="#" target="_blank" class="buy-template-link customization w-inline-block"><img loading="lazy" src="images/flowcub.svg" alt="Logo" class="webflow-logo">
         <div class="buy-template-div">
           <div class="template-text">Book a free assesment</div>
           <div class="template-text template-link-text">Schedule here and we'll respond within 24 hours</div>
