updates to education page

--- a/contact-us.html
+++ b/contact-us.html
@@ -53,9 +53,9 @@
                   <div class="nav-line-div"></div>
                 </div><img src="images/nav-link-icon.svg" loading="lazy" alt="" class="nav-link-image">
               </a>
-              <a data-w-id="4445a924-53a8-cb5a-64c0-9586037f5a18" href="blog.html" class="nav-link w-inline-block">
+              <a data-w-id="4445a924-53a8-cb5a-64c0-9586037f5a18" href="edu.html" class="nav-link w-inline-block">
                 <div class="nav-link-text-div">
-                  <!-- <div class="nav-link-text">Blog</div> -->
+                  <div class="nav-link-text">Education</div>
                   <div class="nav-line-div"></div>
                 </div><img src="images/nav-link-icon.svg" loading="lazy" alt="" class="nav-link-image">
               </a>
