--- a/edu.html
+++ b/edu.html
@@ -17,64 +17,207 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
   <style>
-    .curriculum-card {
-      background-color: #fff;
-      border-radius: 16px;
-      padding: 32px;
-      transition: all 0.3s ease;
-      border: 1px solid #e7e7e7;
+    /* Animated Gradient Hero */
+    .hero-animated {
+      background: linear-gradient(-45deg, #0a0f2e, #1c26e6, #2d1b69, #0d7377, #14274e, #6a4c93);
+      background-size: 400% 400%;
+      animation: gradientShift 15s ease infinite;
+      position: relative;
+      overflow: hidden;
     }
-    .curriculum-card:hover {
-      box-shadow: 0 10px 40px rgba(28, 38, 230, 0.1);
-      transform: translateY(-4px);
+    .hero-animated::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background:
+        radial-gradient(ellipse at 20% 80%, rgba(106, 140, 255, 0.3) 0%, transparent 50%),
+        radial-gradient(ellipse at 80% 20%, rgba(45, 27, 105, 0.4) 0%, transparent 50%),
+        radial-gradient(ellipse at 40% 40%, rgba(13, 115, 119, 0.2) 0%, transparent 40%);
+      animation: floatingOrbs 20s ease-in-out infinite;
     }
-    .week-number {
-      display: inline-block;
-      background-color: #1c26e6;
-      color: white;
+    .hero-animated::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: url("data:image/svg+xml,%3Csvg viewBox='0 0 400 400' xmlns='http://www.w3.org/2000/svg'%3E%3Cfilter id='noiseFilter'%3E%3CfeTurbulence type='fractalNoise' baseFrequency='0.9' numOctaves='3' stitchTiles='stitch'/%3E%3C/filter%3E%3Crect width='100%25' height='100%25' filter='url(%23noiseFilter)'/%3E%3C/svg%3E");
+      opacity: 0.03;
+      pointer-events: none;
+    }
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+    @keyframes floatingOrbs {
+      0%, 100% { transform: translate(0, 0) scale(1); }
+      25% { transform: translate(10px, -20px) scale(1.05); }
+      50% { transform: translate(-10px, 10px) scale(0.95); }
+      75% { transform: translate(20px, 10px) scale(1.02); }
+    }
+
+    /* Typewriter Effect */
+    .typewriter-container {
+      height: 28px;
+      margin-bottom: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .typewriter-text {
       font-size: 14px;
       font-weight: 600;
-      padding: 6px 14px;
-      border-radius: 20px;
-      margin-bottom: 16px;
+      letter-spacing: 2px;
+      text-transform: uppercase;
+      color: rgba(255, 255, 255, 0.9);
+      border-right: 2px solid rgba(255, 255, 255, 0.8);
+      padding-right: 8px;
+      animation: blink 0.7s step-end infinite;
     }
+    @keyframes blink {
+      from, to { border-color: transparent; }
+      50% { border-color: rgba(255, 255, 255, 0.8); }
+    }
+
+    /* Curriculum Cards Enhanced */
+    .curriculum-card {
+      background-color: #fff;
+      border-radius: 20px;
+      padding: 32px;
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+      border: 1px solid #e7e7e7;
+      position: relative;
+      overflow: hidden;
+    }
+    .curriculum-card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 4px;
+      background: linear-gradient(90deg, #1c26e6, #6a8cff, #0d7377);
+      transform: scaleX(0);
+      transform-origin: left;
+      transition: transform 0.4s ease;
+    }
+    .curriculum-card:hover {
+      box-shadow: 0 20px 60px rgba(28, 38, 230, 0.15), 0 0 0 1px rgba(28, 38, 230, 0.1);
+      transform: translateY(-8px) scale(1.02);
+      border-color: rgba(28, 38, 230, 0.2);
+    }
+    .curriculum-card:hover::before {
+      transform: scaleX(1);
+    }
+
+    /* Week Badge Enhanced */
+    .week-badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      background: linear-gradient(135deg, #1c26e6 0%, #6a4c93 100%);
+      color: white;
+      font-size: 13px;
+      font-weight: 700;
+      padding: 8px 16px;
+      border-radius: 24px;
+      margin-bottom: 20px;
+      letter-spacing: 0.5px;
+    }
+
+    /* Curriculum Icon */
+    .curriculum-icon {
+      width: 48px;
+      height: 48px;
+      background: linear-gradient(135deg, #ebf2ff 0%, #fff 100%);
+      border-radius: 12px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin-bottom: 16px;
+      border: 1px solid #e7e7e7;
+      transition: all 0.3s ease;
+    }
+    .curriculum-card:hover .curriculum-icon {
+      background: linear-gradient(135deg, #1c26e6 0%, #6a8cff 100%);
+      border-color: transparent;
+    }
+    .curriculum-icon svg {
+      width: 24px;
+      height: 24px;
+      stroke: #1c26e6;
+      stroke-width: 1.5;
+      fill: none;
+      transition: stroke 0.3s ease;
+    }
+    .curriculum-card:hover .curriculum-icon svg {
+      stroke: white;
+    }
+
     .curriculum-grid {
       display: grid;
       grid-template-columns: repeat(2, 1fr);
-      gap: 24px;
+      gap: 28px;
+    }
+    @media (max-width: 991px) {
+      .curriculum-grid {
+        gap: 20px;
+      }
     }
     @media (max-width: 767px) {
       .curriculum-grid {
         grid-template-columns: 1fr;
       }
     }
+
     .feature-badge {
       display: inline-flex;
       align-items: center;
       gap: 8px;
-      background: linear-gradient(135deg, #1c26e6 0%, #6a8cff 100%);
+      background: rgba(255, 255, 255, 0.15);
+      backdrop-filter: blur(10px);
       color: white;
       padding: 12px 24px;
       border-radius: 30px;
       font-weight: 600;
-      font-size: 16px;
+      font-size: 15px;
+      border: 1px solid rgba(255, 255, 255, 0.2);
+      transition: all 0.3s ease;
     }
+    .feature-badge:hover {
+      background: rgba(255, 255, 255, 0.25);
+      transform: translateY(-2px);
+    }
+
     .highlight-box {
-      background: linear-gradient(135deg, #ebf2ff 0%, #fff 100%);
+      background: linear-gradient(135deg, #f8faff 0%, #fff 100%);
       border-left: 4px solid #1c26e6;
-      padding: 24px;
+      padding: 20px 24px;
       border-radius: 0 12px 12px 0;
-      margin: 16px 0;
+      margin: 20px 0;
     }
+
     .tool-tag {
       display: inline-block;
       background-color: #f6f6f6;
       color: #4f4f4f;
-      font-size: 13px;
-      padding: 4px 12px;
-      border-radius: 4px;
+      font-size: 12px;
+      font-weight: 500;
+      padding: 6px 12px;
+      border-radius: 6px;
       margin: 4px 4px 4px 0;
+      transition: all 0.2s ease;
     }
+    .tool-tag:hover {
+      background-color: #1c26e6;
+      color: white;
+    }
+
     .counseling-card {
       background: linear-gradient(135deg, #1c26e6 0%, #1a24b9 100%);
       border-radius: 16px;
@@ -91,6 +234,20 @@
       width: 100%;
       height: 100%;
       background: radial-gradient(circle, rgba(255,255,255,0.1) 0%, transparent 70%);
+    }
+
+    /* Hero Content Styling */
+    .hero-content {
+      position: relative;
+      z-index: 1;
+      text-align: center;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .hero-subtext {
+      max-width: 600px;
+      margin: 24px auto 32px;
+      text-align: center;
     }
   </style>
 </head>
@@ -142,16 +299,19 @@
   </div>
 
   <!-- Hero Section -->
-  <section class="hero-section" style="background: linear-gradient(135deg, #1c26e6 0%, #0a0f5c 100%); min-height: 80vh; display: flex; align-items: center;">
+  <section class="hero-section hero-animated" style="min-height: 85vh; display: flex; align-items: center;">
     <div class="w-layout-blockcontainer container w-container">
-      <div class="home-hero-detail-div" style="text-align: center; max-width: 800px; margin: 0 auto;">
-        <div class="sub-heading white-text" style="margin-bottom: 16px;">College-Level AI Training</div>
-        <h1 class="h1-heading home-hero-heading" style="font-size: 56px; line-height: 1.2;">AI Foundations</h1>
-        <p class="large-paragraph home-hero-paragraph" style="margin-top: 24px; margin-bottom: 32px;">An 8-week hands-on course teaching practical AI skills. No theoretical nonsense - just real-world applications you can use immediately.</p>
+      <div class="hero-content">
+        <!-- Typewriter Effect -->
+        <div class="typewriter-container">
+          <span class="typewriter-text" id="typewriter"></span>
+        </div>
+        <h1 class="h1-heading home-hero-heading" style="font-size: 64px; line-height: 1.15; color: white; margin-bottom: 0;">AI Foundations</h1>
+        <p class="large-paragraph home-hero-paragraph hero-subtext" style="color: rgba(255,255,255,0.85);">An 8-week hands-on course teaching practical AI skills. No theoretical nonsense - just real-world applications you can use immediately.</p>
         <div style="display: flex; gap: 16px; justify-content: center; flex-wrap: wrap;">
           <a href="contact-us.html" class="common-button white-button w-button">Enroll Now</a>
           <div class="feature-badge">
-            <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
               <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"></path>
               <polyline points="22 4 12 14.01 9 11.01"></polyline>
             </svg>
@@ -244,7 +404,10 @@
       <div class="curriculum-grid">
         <!-- Week 1 -->
         <div class="curriculum-card">
-          <div class="week-number">Week 1</div>
+          <div class="curriculum-icon">
+            <svg viewBox="0 0 24 24"><path d="M12 2a2 2 0 0 1 2 2c0 .74-.4 1.39-1 1.73V7h1a7 7 0 0 1 7 7h1a1 1 0 0 1 1 1v3a1 1 0 0 1-1 1h-1v1a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-1H2a1 1 0 0 1-1-1v-3a1 1 0 0 1 1-1h1a7 7 0 0 1 7-7h1V5.73c-.6-.34-1-.99-1-1.73a2 2 0 0 1 2-2z"/><circle cx="8.5" cy="14.5" r="1.5"/><circle cx="15.5" cy="14.5" r="1.5"/></svg>
+          </div>
+          <div class="week-badge">Week 1</div>
           <div class="h4-heading" style="margin-bottom: 12px;">Intro to LLMs</div>
           <p class="paragraph" style="margin-bottom: 16px;">Understand how large language models work under the hood. Explore the transformer architecture and see what makes models "large" vs "small."</p>
           <div class="highlight-box">
@@ -259,7 +422,10 @@
 
         <!-- Week 2 -->
         <div class="curriculum-card">
-          <div class="week-number">Week 2</div>
+          <div class="curriculum-icon">
+            <svg viewBox="0 0 24 24"><path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/><path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/><line x1="8" y1="6" x2="16" y2="6"/><line x1="8" y1="10" x2="16" y2="10"/><line x1="8" y1="14" x2="12" y2="14"/></svg>
+          </div>
+          <div class="week-badge">Week 2</div>
           <div class="h4-heading" style="margin-bottom: 12px;">Context Engineering</div>
           <p class="paragraph" style="margin-bottom: 16px;">Build a persistent AI personality that remembers you. Learn how to use project knowledge bases to upload writing style, past projects, and interests.</p>
           <div class="highlight-box">
@@ -274,7 +440,10 @@
 
         <!-- Week 3 -->
         <div class="curriculum-card">
-          <div class="week-number">Week 3</div>
+          <div class="curriculum-icon">
+            <svg viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><circle cx="8.5" cy="8.5" r="1.5"/><polyline points="21 15 16 10 5 21"/></svg>
+          </div>
+          <div class="week-badge">Week 3</div>
           <div class="h4-heading" style="margin-bottom: 12px;">Multi-Modal Problem Solving</div>
           <p class="paragraph" style="margin-bottom: 16px;">Dive into vision models - how they work and why they sometimes break. Learn to leverage AI for creative and technical tasks.</p>
           <div class="highlight-box">
@@ -289,7 +458,10 @@
 
         <!-- Week 4 -->
         <div class="curriculum-card">
-          <div class="week-number">Week 4</div>
+          <div class="curriculum-icon">
+            <svg viewBox="0 0 24 24"><polyline points="16 3 21 3 21 8"/><line x1="4" y1="20" x2="21" y2="3"/><polyline points="21 16 21 21 16 21"/><line x1="15" y1="15" x2="21" y2="21"/><line x1="4" y1="4" x2="9" y2="9"/></svg>
+          </div>
+          <div class="week-badge">Week 4</div>
           <div class="h4-heading" style="margin-bottom: 12px;">AI Automation</div>
           <p class="paragraph" style="margin-bottom: 16px;">Learn to orchestrate AI to take multiple steps without being asked twice. Understand "if this, then that" logic at a high level.</p>
           <div class="highlight-box">
@@ -304,7 +476,10 @@
 
         <!-- Week 5 -->
         <div class="curriculum-card">
-          <div class="week-number">Week 5</div>
+          <div class="curriculum-icon">
+            <svg viewBox="0 0 24 24"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/><line x1="12" y1="2" x2="12" y2="22"/></svg>
+          </div>
+          <div class="week-badge">Week 5</div>
           <div class="h4-heading" style="margin-bottom: 12px;">Coding Without Syntax</div>
           <p class="paragraph" style="margin-bottom: 16px;">AI breaks down the walls of traditional coding. Learn how to describe what you want and let AI handle the syntax.</p>
           <div class="highlight-box">
@@ -319,7 +494,10 @@
 
         <!-- Week 6 -->
         <div class="curriculum-card">
-          <div class="week-number">Week 6</div>
+          <div class="curriculum-icon">
+            <svg viewBox="0 0 24 24"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/><path d="M12 8v4"/><path d="M12 16h.01"/></svg>
+          </div>
+          <div class="week-badge">Week 6</div>
           <div class="h4-heading" style="margin-bottom: 12px;">Deepfakes & Safety</div>
           <p class="paragraph" style="margin-bottom: 16px;">It's incredibly easy to make a lifelike digital clone of someone. We'll prove it by doing exactly that - then learn how to spot fakes.</p>
           <div class="highlight-box">
@@ -334,7 +512,10 @@
 
         <!-- Week 7 -->
         <div class="curriculum-card">
-          <div class="week-number">Week 7</div>
+          <div class="curriculum-icon">
+            <svg viewBox="0 0 24 24"><line x1="18" y1="20" x2="18" y2="10"/><line x1="12" y1="20" x2="12" y2="4"/><line x1="6" y1="20" x2="6" y2="14"/><line x1="2" y1="20" x2="22" y2="20"/></svg>
+          </div>
+          <div class="week-badge">Week 7</div>
           <div class="h4-heading" style="margin-bottom: 12px;">Data Science</div>
           <p class="paragraph" style="margin-bottom: 16px;">Feed large datasets into an LLM to find trends. Use real data to identify ways to improve your neighborhood or school.</p>
           <div class="highlight-box">
@@ -349,7 +530,10 @@
 
         <!-- Week 8 -->
         <div class="curriculum-card">
-          <div class="week-number">Week 8</div>
+          <div class="curriculum-icon">
+            <svg viewBox="0 0 24 24"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/></svg>
+          </div>
+          <div class="week-badge">Week 8</div>
           <div class="h4-heading" style="margin-bottom: 12px;">Demo Day</div>
           <p class="paragraph" style="margin-bottom: 16px;">Present your final project to the class. Based on your Week 7 proposal, build and demonstrate a solution using multiple AI tools.</p>
           <div class="highlight-box">
@@ -592,5 +776,53 @@
 
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=68e2b5017ce335565e4212dc" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/webflow.js" type="text/javascript"></script>
+
+  <!-- Typewriter Effect -->
+  <script>
+    const phrases = [
+      "Built by UC Berkeley Engineers",
+      "Silicon Valley's Premier Curriculum",
+      "Mastery Taught by Industry Veterans",
+      "From Big Tech to Your Classroom",
+      "Experience from Apple, Meta & More",
+      "Award-Winning AI Education"
+    ];
+
+    const typewriter = document.getElementById('typewriter');
+    let phraseIndex = 0;
+    let charIndex = 0;
+    let isDeleting = false;
+    let typingSpeed = 80;
+
+    function type() {
+      const currentPhrase = phrases[phraseIndex];
+
+      if (isDeleting) {
+        typewriter.textContent = currentPhrase.substring(0, charIndex - 1);
+        charIndex--;
+        typingSpeed = 40;
+      } else {
+        typewriter.textContent = currentPhrase.substring(0, charIndex + 1);
+        charIndex++;
+        typingSpeed = 80;
+      }
+
+      if (!isDeleting && charIndex === currentPhrase.length) {
+        isDeleting = true;
+        typingSpeed = 2000; // Pause at end
+      } else if (isDeleting && charIndex === 0) {
+        isDeleting = false;
+        phraseIndex = (phraseIndex + 1) % phrases.length;
+        typingSpeed = 500; // Pause before next phrase
+      }
+
+      setTimeout(type, typingSpeed);
+    }
+
+    // Start typewriter when page loads
+    document.addEventListener('DOMContentLoaded', function() {
+      setTimeout(type, 1000);
+    });
+  </script>
 </body>
 </html>
