removed services and projects from nav

--- a/edu.html
+++ b/edu.html
@@ -598,7 +598,7 @@
                 </div>
                 <div class="testimonial-user-info-div"><img src="images/user2.jpg" loading="lazy" alt="User Image" class="testimonial-user-image">
                   <div class="testimonial-info">
-                    <div class="large-paragraph bold-text">Maya S.</div>
+                    <div class="large-paragraph bold-text">Tom S.</div>
                     <div class="small-paragraph">High School Senior</div>
                   </div>
                 </div>
